--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "proxy": "https://localhost:4000/"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/joy": "^5.0.0-beta.52",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +24,7 @@
     "react-notifications": "^1.7.4",
     "react-notifications-component": "^4.0.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
