Add Dockerfile and app code for deployment

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Baymax AI",
-  "name": "Baymax AI",
+  "short_name": "Doze",
+  "name": "Doze",
   "icons": [
     {
       "src": "favicon.ico",
