--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,3 +20,14 @@ scipy==1.15.0
 simple-websocket==1.1.0
 Werkzeug==3.1.3
 wsproto==1.2.0
+fastapi
+uvicorn[standard]
+torch
+torchvision
+opencv-python-headless
+dlib
+imutils
+scipy
+pillow
+pandas
+matplotlib
