--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,30 @@
-FROM python:3.13-slim
+FROM python:3.11-slim AS builder
 
-RUN pip install --upgrade pip && \
-    apt-get update && \
-    apt-get upgrade -y
+RUN apt-get update && apt-get install -y \
+  build-essential cmake libboost-all-dev libgl1 \
+  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y \
-  cmake \
-  build-essential \
-  libboost-all-dev \
-  libgl1 \
-  && rm -rf /var/lib/apt/lists/*
-
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip
+
+RUN pip install torch==2.0.1+cpu torchvision==0.15.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+
+RUN sed '/torch/d;/torchvision/d' requirements.txt > requirements_no_torch.txt
+RUN pip install --no-cache-dir -r requirements_no_torch.txt
 
 COPY . .
+
+FROM python:3.11-slim
+
+WORKDIR /app
+
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+COPY --from=builder /app /app
 
 EXPOSE 4000
 
