--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,8 @@
 bidict==0.23.1
 blinker==1.9.0
 click==8.1.8
-dlib==19.24.6
+# Using dlib pre-built wheel, so no version pin needed here; you can comment it out if build still fails
+dlib==19.24.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-SocketIO==5.5.1
@@ -10,9 +11,8 @@ imutils==0.5.4
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
-numpy==2.2.1
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
+numpy==1.24.4
+opencv-python-headless==4.10.0.84
 python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
@@ -20,14 +20,10 @@ scipy==1.15.0
 simple-websocket==1.1.0
 Werkzeug==3.1.3
 wsproto==1.2.0
-fastapi
-uvicorn[standard]
-torch
-torchvision
-opencv-python-headless
-dlib
-imutils
-scipy
-pillow
-pandas
-matplotlib
+fastapi==0.95.2
+uvicorn[standard]==0.23.2
+pillow==11.3.0
+pandas==2.3.2
+matplotlib==3.10.6
+# torch==2.0.1
+# torchvision==0.15.2
