--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -25,5 +25,5 @@ uvicorn[standard]==0.23.2
 pillow==11.3.0
 pandas==2.3.2
 matplotlib==3.10.6
-# torch==2.0.1
-# torchvision==0.15.2
+torch==2.0.1
+torchvision==0.15.2
